Added some styling for city listings

--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,10 @@
 .App-link {
   color: #09d3ac;
 }
+
+.city-listing {
+  background-color: #222;
+  margin: 3px 0;
+  padding-top: 0;
+  text-transform: uppercase;
+}
